# pigiot.net

./: .env.dev  .env.release  .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  build.rs  docker-compose.yml  package.json  refined.rs  wrangler.toml
.cargo/: config.toml
assets/: tailwind.css
locales/: en-US.ftl
schemas/kratos/: identity.user.schema.json  kratos.yml
schemas/kratos/email-password/: kratos.yml
src/: config.rs  main.rs
src/components/: alert.rs  footer.rs  lang.rs  login_modal.rs  logo.rs  mod.rs  navbar.rs  ory_error.rs  ory_form_builder.rs  ory_log_out.rs  register_modal.rs  session_cookie.rs  theme_controller.rs
src/partials/: audience.rs  code_showcase.rs  connectivity.rs  cta.rs  features.rs  home.rs  infrastructure.rs  mod.rs
src/views/: about.rs  error.rs  faq.rs  index.rs  login.rs  mod.rs  recovery.rs  register.rs  session.rs  settings.rs  verification.rs  wrapper.rs
